--- a/code/configuration.js.sample
+++ b/code/configuration.js.sample
@@ -5,3 +5,4 @@ const filter = "newer_than:1d AND label:Berlitz/Schedule AND -label:ProcessedSch
 const updatedFilter = "newer_than:1d and label:Berlitz/Schedule AND label:ProcessedSchedule";
 const baseLC = "Akasaka"; // Set your Base LC here
 const writeSpreadSheet = true or false // Set false if you are not writing a spreadsheet.
+const showMaterial = true or false
